# de-movies

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: extract.py  ge_extract.py  movie_dag.py
dbt_movies/: dbt_project.yml
dbt_movies/models/: schema.yml
dbt_movies/models/staging/: imdb_basics_cleansed.sql  imdb_ratings_cleansed.sql  nyt_reviews_cleansed.sql
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: imdb_basic_raw.yml  imdb_rating_raw.yml  nyt_review_raw.yml
great_expectations/expectations/: .ge_store_backend_id
great_expectations/expectations/imdb-basic/: raw.json
great_expectations/expectations/imdb-rating/: raw.json
great_expectations/expectations/nyt-review/: raw.json
movies/: extract.py
snowflake/: setup.py
transform/: dbt_project.yml
transform/models/: schema.yml  sources.yml
transform/models/dim/: dim_imdb_genres.sql  dim_imdb_movies.sql  dim_imdb_ratings.sql  dim_nyt_authors.sql  dim_nyt_movies.sql  dim_nyt_reviews.sql
transform/models/fct/: fct_imdb_nyt.sql
transform/models/mart/: mart_genre.sql
transform/models/staging/: imdb_basics_cleansed.sql  imdb_ratings_cleansed.sql
transform/snapshots/: imdb_basic_snapshot.sql  imdb_rating_snapshot.sql  nyt_snapshot.sql
transform/tests/: dim_imdb_movies_runtime_minutes_nonnegative.sql  dim_imdb_movies_year_positive.sql  imdb_ratings_positive_average_rating.sql  imdb_ratings_positive_num_votes.sql  nyt_reviews_movie_title_has_length.sql
