[tool.poetry]
name = "movies"
version = "0.1.0"
description = "Data pipeline for NYT movie reviews"
authors = ["Alexander Butz <alex.butz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
